v6/iso_encoder/keymaps/wave_db/Errors.txt
Compiling: .build/obj_keychron_v6_iso_encoder_wave_db/src/default_keyboard.c                        [OK]
Compiling: quantum/keymap_introspection.c                                                          In file included from quantum/keymap_introspection.c:9:
./keyboards/keychron/v6/iso_encoder/keymaps/wave_db/keymap.c: In function 'process_record_user':
./keyboards/keychron/v6/iso_encoder/keymaps/wave_db/keymap.c:189:41: error: 'led_config_t' has no member named 'matrix_coordinatemap'
189 |         uint8_t led_index = g_led_config.matrix_coordinatemap[row][col];
|                                         ^
[ERRORS]
|
|
|
